Fix #44 by blocking collapse opening via login and request latest duplications after login

--- a/style.css
+++ b/style.css
@@ -168,3 +168,7 @@ body {
 .text-pad-left {
     padding-left: 10px;
 }
+
+.valid-btn {
+    margin-bottom: 15px;
+}
